# ChangeLog for media-libs/libsamplerate
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libsamplerate/ChangeLog,v 1.4 2003/04/03 22:18:20 vladimir Exp $

*libsamplerate-0.0.14 (30 Jan 2003)

  03 Apr 2003; Graham Forest <vladimir@gentoo.org>
  libsamplerate-0.0.14.ebuild:
  set ~ppc in keywords

  30 Jan 2003; Nick Hadaway <raker@gentoo.org>
  libsamplerate-0.0.14.ebuild, files/digest-libsamplerate-0.0.14 :
  Version bump.

*libsamplerate-0.0.13 (06 Jan 2003)

  06 Jan 2003; Nick Hadaway <raker@gentoo.org>
  libsamplerate-0.0.13.ebuild, files/digest-libsamplerate-0.0.13 :
  New ebuild added as ardour-cvs-0.6 now requires this library.